# react_fast_backend

./: .gitignore  CICD.bash  README.md  devCICD.bash  kill_all.bash  pyproject.toml
MatchEngine/: MatchEngine.py  data.py  pyproject.toml
backend/: pyproject.toml  run.bash  test_main.py
backend/users/: schemas.py
datapanel/: README.md  datapanel.py  main.py  pyprocessor.py  pyproject.toml  run.bash
glove/: README.md  dev.bash  glove.py  pyproject.toml  run.bash  test_glove.py
infra/: README.md  celery_start.bash  celery_stop.bash  dev.bash  infra.py  pyproject.toml  run.bash  tasks.py
journal/: .gitignore  dev.bash  journal.py  pyproject.toml  run.bash  test_main.py
journal/users/: models.py  router.py
