[tool.poetry]
name = "datapanel"
version = "0.1.0"
description = ""
authors = ["CLQuantizer <ezioxxk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <=3.11"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
redis = "^4.3.4"
psutil = "^5.9.3"
gensim = "^4.2.0"
pytest = "^7.1.3"
requests = "^2.28.1"
celery = "^5.2.7"
motor = "^3.0.0"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.37"
psycopg2-binary = "^2.9.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
