[tool.poetry]
name = "datapanel"
version = "0.1.0"
description = ""
authors = ["CLQuantizer <ezioxxk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <=3.11"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
redis = "^4.3.4"
psutil = "^5.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
