[tool.poetry]
name = "glove"
version = "0.1.0"
description = ""
authors = ["CLQuantizer <ezioxxk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
gensim = "^4.2.0"
redis = "^4.3.4"
pytest = "^7.1.3"
fastapi = "^0.85.0"
requests = "^2.28.1"
uvicorn = "^0.18.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]