[tool.poetry]
name = "infra"
version = "0.1.0"
description = ""
authors = ["CLQuantizer <ezioxxk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
